test/localVariableInFunctionReturnTypeError3.slq

def f(moved n:!â„•){ /// error
	n=5;
	return vector(n,0:ğ”¹);
}

def main(){
	x := f(42);
	return measure[B^42](x);
}
